--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -6,3 +6,13 @@ language:
     chapter_name: "Kapitel "
 output_dir: "docs"
 
+rmd_files: ["index.Rmd", "01_install.Rmd",
+            "02_r-basics.Rmd", "03_version-control.Rmd",
+            "04_rmarkdown.Rmd", "05_ltzt-vrbrtng.Rmd",
+            "06_dplyr-intro.Rmd","07_dplyr.Rmd",
+            "08_import-export.Rmd","09_tidy.Rmd",
+            "10_ggplot2_intro.Rmd","11_ggplot2_bausteine.Rmd",
+            "12_sampling.Rmd",
+            "22_pakete.Rmd", "20_appendix.Rmd",
+            "23_funktionen.Rmd","24_env_scoping.Rmd",
+            "30_literatur.Rmd"]
