--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -12,7 +12,8 @@ rmd_files: ["index.Rmd", "01_install.Rmd",
             "06_dplyr-intro.Rmd","07_dplyr.Rmd",
             "08_import-export.Rmd","09_tidy.Rmd",
             "10_ggplot2_intro.Rmd","11_ggplot2_bausteine.Rmd",
+            "22_pakete.Rmd",
             "12_sampling.Rmd",
-            "22_pakete.Rmd", "20_appendix.Rmd",
+             "20_appendix.Rmd",
             "23_funktionen.Rmd","24_env_scoping.Rmd",
             "30_literatur.Rmd"]
